@@ -7,10 +7,10 @@ dnl information
 dnl
 
 dnl Initialize autoconf/automake
-AC_INIT(hamsterdb, 1.0.4)
+AC_INIT(hamsterdb, 1.0.5)
 AC_CONFIG_SRCDIR(src/hamsterdb.c)
 AC_CONFIG_AUX_DIR(build/scripts)
-AM_INIT_AUTOMAKE(hamsterdb, 1.0.4)
+AM_INIT_AUTOMAKE(hamsterdb, 1.0.5)
 
 AM_CONFIG_HEADER(config.h)
 
