@@ -11,7 +11,7 @@
  *
  * \file hamsterdb.hpp
  * \author Christoph Rupp, chris@crupp.de
- * \version 1.0.4
+ * \version 1.0.5
  *
  * This C++ wrapper class is a very tight wrapper around the C API. It does
  * not attempt to be STL compatible. 
