@@ -31,8 +31,8 @@ extern "C" {
  */
 #define HAM_VERSION_MAJ 1
 #define HAM_VERSION_MIN 0
-#define HAM_VERSION_REV 4
-#define HAM_VERSION_STR "1.0.4"
+#define HAM_VERSION_REV 5
+#define HAM_VERSION_STR "1.0.5"
 
 
 #ifdef __cplusplus
