@@ -1,3 +1,5 @@
+Aug 07, 2008 - chris ---------------------------------------------------
+                      release of hamsterdb-1.0.5
 
 Aug 03, 2008 - chris
 o On Linux for ARM: disable pread/pwrite; pwrite seems to be buggy, 
